--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -2,13 +2,14 @@
 <div class="parent">
 <div class="child">
     <h1>SCHOOL  APPLICATION</h1>
+
     <label for=""></label>
     <input type="text" placeholder="Enter Email">
     <br>
     <label for=""></label>
     <input type="text" placeholder="Enter Password">
     <br>
-    <button>Login</button>
+    <button class="login">Login</button>
 
 </div>
 </div>
