--- a/src/app/login/login.component.scss
+++ b/src/app/login/login.component.scss
@@ -10,12 +10,37 @@ h1{
     align-items: center;
 }
 .child{
+    
     background-color: aliceblue;
-    height: 500px;
+    height: 400px;
     width: 400px;
     padding: 20px;
     border-radius: 10px;
+    text-align: center;
+    
+    
+    
+    
 }
 input{
-    
+    width: 50%;
+    height: 10px;
+    padding: 10px;
+    margin-left: 100px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-weight: bolder;
+    border: 1px;
+    border-radius:10px ;
+}
+.login{
+    width: 100px;
+    padding: 10px;
+    border: 0px;
+    border-radius: 10px;
+    background-color: blue;
+    color: white;
+    font-weight: bolder;
+    margin-left: 0px;
 }
